--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".ConfigActivity"></activity>
         <activity android:name=".EventosActivity" />
         <activity android:name=".DocentesActivity" />
-        <activity android:name=".AulasActivity" />
+        <activity android:name=".AulasActivity">
+
+        </activity>
         <activity android:name=".PrincipalActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
