--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,20 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {url "https://plugins.gradle.org/m2/"} //added for SonarQube
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+apply plugin: "org.sonarqube"
 
 allprojects {
     repositories {
