--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,50 +5,45 @@
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:debuggable="true"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="allowBackup"
-        tools:ignore="HardcodedDebugMode">
-
-        <activity android:name=".LoginActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar"
-            android:exported="true">
-        </activity>
-
-
-        <activity android:name=".RecoverPasswordActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar">
-        </activity>
-
-
-        <activity android:name=".ConfigActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar"/>
-
-
-        <activity android:name=".EventosActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar"/>
-
-
-        <activity android:name=".DocentesActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar">
-        </activity>
-
-
-        <activity android:name=".AulasActivity"
+        tools:ignore="HardcodedDebugMode"
+        tools:replace="allowBackup">
+        <activity android:name=".AyudaMejorarActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar"></activity>
-
-
-        <activity android:name=".PrincipalActivity"
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"
             android:theme="@style/Theme.Design.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".RecoverPasswordActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar"></activity>
+        <activity
+            android:name=".ConfigActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity
+            android:name=".EventosActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity
+            android:name=".DocentesActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar"></activity>
+        <activity
+            android:name=".AulasActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity
+            android:name=".PrincipalActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar">
+
         </activity>
     </application>
 
