En este commit se trabajo en la activity de Docentes, haciendo el listado de todos los docenetes de la Universidad, y la activity perfil del docente

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode"
         tools:replace="allowBackup">
-        <activity android:name=".Aulas.AulaPerfilActivity"></activity>
+        <activity android:name=".Docentes.DocentePerfilActivity"></activity>
+        <activity android:name=".Aulas.AulaGaleria" />
+        <activity android:name=".Aulas.AulaPerfilActivity" />
         <activity
             android:name=".Aulas.AulasWebView"
             android:label="@string/title_activity_aulas_web_view"
